--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ section{
     width: 1440px;
     height: 677px;
 }
+
+
 .section-left{
     font-size: 64px;
     font-weight: 700;
@@ -122,6 +124,7 @@ main{
     margin-left: 69px;
 }
 
+/* -------------------Start Foot-------------------- */
 .foot{
    
     margin-top: 158px;
@@ -131,10 +134,12 @@ main{
 .logo{
     margin-left: 475px;
     margin-right: 481px;
+    
 }
 .logo img{
     width: 483px;
     height: 110px;
+    transition: transform 1.4s ease;
 }
 .social-icon{
     display: flex;
@@ -162,4 +167,85 @@ main{
     height: 31px;
     margin-left: 598px;
     margin-right: 605;
+    
+    /*------------------- Footer End------------------------- */
+
+    /*------------------------ Hover style-------------------
+    -------------------------------------------------------- */
+}
+footer:hover .logo >img{
+    transform: scale(1.3);
+}
+
+@media only screen and (max-width:688px) {
+    
+    body{
+        
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+
+    }
+    section ,main{
+        width: 100%;
+        height: auto;
+        margin-right: 0px;
+    }
+    section , .palyers , .highlights, .foot{
+        flex-direction: column;
+    }
+    .players-platform{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .banner img{
+        width: 50%;
+        height: 50%;
+        margin-left: 50px;
+    }
+    .logo{
+        margin-left: 32px;
+
+    }
+    .copyright{
+        margin-left: 50%;
+    }
+}
+@media only screen and (min-width:688px) and (max-width:992px) {
+    
+    body{
+        
+        /* display: grid; */
+        grid-template-columns: repeat(2,1fr);
+
+    }
+    section, main{
+        width: 100%;
+        height: auto;
+        margin-right: 0px;
+         
+    }
+    
+    .players-platform{
+        margin-left: 20px;
+    }
+    
+    section , .highlights{
+        flex-direction: column;
+    }
+    .players-platform{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+     .banner img{
+        width: 50%;
+        height: 50%;
+         margin-left: 50px;  
+    }
+    .logo{
+        margin-left: 50px;
+
+    }
+    .copyright{
+        margin-left: 50%;
+    }
 }
